--- a/index.html
+++ b/index.html
@@ -5,46 +5,64 @@
        <meta charset="utf-8"/>
        <link rel="stylesheet" href="reset.css" />
        <link rel="stylesheet" href="style.css" />
-   </head>
-   <body>
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
+    </head>
+   <body style="background-color:powderblue;">
     <header>
     <h1>Welcome to Burgarköket</h1>
     </header>
      <nav>Welcome to buy a burger</nav>
     <main> <h1>The best burgers in town</h1>
     </main>
-        <section> 
+        <section id="section1"> 
             <h2>Select a Burger</h2>
                 <p>This is where you select a burger</p>
              <div style="display: inline-block">
                 <h3>Chiliburgare</h3>
-            <img src="img/chiliburgare.jpg" alt="Chiliburgare" title="Our spicy chiliburger" style="width: 200px">
-            <ul>
-                <li>Tomato</li>
-                <li>Lactose</li>
-                <li>Gluten</li>
-            </ul>
+            
+                <img src="img/chiliburgare.jpg" alt="Chiliburgare" title="Our spicy chiliburger" style="width: 200px">
+            <section class="allergies">
+                <p> Allergies <span id="chiliburgeare-allergies">
+                    <ul>
+                        <li>Tomato</li>
+                        <li>Lactose</li>
+                        <li>Gluten</li>
+                    </ul>
+                </span>
+                </p>
+            </section>
             </div>
              <div style="display: inline-block">
                 <h3>Goa Burgaren</h3>
-                <img src="img/goaburgare.jpg" alt="Chiliburgare" title="Our goa burger" style="width: 200px">
-                <ul>
-                    <li>Tomato</li>
-                    <li>Lactose</li>
-                </ul>
+                <img src="img/goaburgare.jpg" alt="Goaburgare" title="Our goa burger" style="width: 200px">
+               <section class="allergies">
+                <p> Allergies <span id="goaburgare-allergies">
+                    <ul>
+                        <li>Tomato</li>
+                        <li>Lactose</li>
+                        <li>Gluten</li>
+                    </ul>
+                </span>
+                </p>
+            </section>
             </div>
              <div style="display: inline-block">
         
                 <h3>Heta Burgaren</h3>
-                <img src="img/hetburgare.jpg" alt="Chiliburgare" title="Our hot burger" style="width: 200px">
-                <ul>
-                    <li>Meat</li>
-                    <li>Lactose</li>
-                    <li>Gluten</li>
-                </ul>
+                <img src="img/hetburgare.jpg" alt="Hetaburgare" title="Our hot burger" style="width: 200px">
+                <section class="allergies">
+                <p> Allergies <span id="Hetaburgare-allergies">
+                    <ul>
+                        <li>Tomato</li>
+                        <li>Lactose</li>
+                        <li>Gluten</li>
+                    </ul>
+                </span>
+                </p>
+            </section>
             </div>
         </section>
-        <section> 
+        <section id="section2"> 
             <h2>Costumer Information</h2>
                 <p>This is where you provide necessary Information</p>
             <h3>Delivery informaiton</h3>
