--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
    <body style="background-color:powderblue;">
-    <header>
-    <h1>Welcome to Burgarköket</h1>
+    <header class="welcome">
+        <h1>Welcome to Burgarköket</h1>
     </header>
      <nav>Welcome to buy a burger</nav>
     <main> <h1>The best burgers in town</h1>
@@ -17,7 +17,8 @@
         <section id="section1"> 
             <h2>Select a Burger</h2>
                 <p>This is where you select a burger</p>
-             <div style="display: inline-block">
+            <div class="burgers">
+             <div class="chiliburger" style="display: inline-block">
                 <h3>Chiliburgare</h3>
             
                 <img src="img/chiliburgare.jpg" alt="Chiliburgare" title="Our spicy chiliburger" style="width: 200px">
@@ -32,7 +33,7 @@
                 </p>
             </section>
             </div>
-             <div style="display: inline-block">
+             <div class="goaburger" style="display: inline-block">
                 <h3>Goa Burgaren</h3>
                 <img src="img/goaburgare.jpg" alt="Goaburgare" title="Our goa burger" style="width: 200px">
                <section class="allergies">
@@ -46,7 +47,7 @@
                 </p>
             </section>
             </div>
-             <div style="display: inline-block">
+             <div class="hetaburger" style="display: inline-block">
         
                 <h3>Heta Burgaren</h3>
                 <img src="img/hetburgare.jpg" alt="Hetaburgare" title="Our hot burger" style="width: 200px">
@@ -57,9 +58,10 @@
                         <li>Lactose</li>
                         <li>Gluten</li>
                     </ul>
-                </span>
-                </p>
-            </section>
+                    </span>
+                    </p>
+                </section>
+                </div>
             </div>
         </section>
         <section id="section2"> 
