--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
        <link rel="stylesheet" href="style.css" />
         <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
-   <body style="background-color:powderblue;">
+   <body>
     <header class="welcome">
         <h1>Welcome to Burgarköket</h1>
     </header>
-     <nav>Welcome to buy a burger</nav>
     <main> <h1>The best burgers in town</h1>
     </main>
         <section id="section1"> 
-            <h2>Select a Burger</h2>
+            <h1>Select a Burger</h1>
                 <p>This is where you select a burger</p>
             <div class="burgers">
-             <div class="chiliburger" style="display: inline-block">
+             <div class="chiliburger">
                 <h3>Chiliburgare</h3>
             
-                <img src="img/chiliburgare.jpg" alt="Chiliburgare" title="Our spicy chiliburger" style="width: 200px">
+                <img src="img/chiliburgare.jpg" alt="Chiliburgare" title="Our spicy chiliburger">
             <section class="allergies">
                 <p> Allergies <span id="chiliburgeare-allergies">
                     <ul>
@@ -33,9 +32,9 @@
                 </p>
             </section>
             </div>
-             <div class="goaburger" style="display: inline-block">
+             <div class="goaburger">
                 <h3>Goa Burgaren</h3>
-                <img src="img/goaburgare.jpg" alt="Goaburgare" title="Our goa burger" style="width: 200px">
+                <img src="img/goaburgare.jpg" alt="Goaburgare" title="Our goa burger">
                <section class="allergies">
                 <p> Allergies <span id="goaburgare-allergies">
                     <ul>
@@ -47,10 +46,10 @@
                 </p>
             </section>
             </div>
-             <div class="hetaburger" style="display: inline-block">
+             <div class="hetaburger">
         
                 <h3>Heta Burgaren</h3>
-                <img src="img/hetburgare.jpg" alt="Hetaburgare" title="Our hot burger" style="width: 200px">
+                <img src="img/hetburgare.jpg" alt="Hetaburgare" title="Our hot burger">
                 <section class="allergies">
                 <p> Allergies <span id="Hetaburgare-allergies">
                     <ul>
